# django-starter-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.py
core/: models.py
core/migrations/: 0001_initial.py
requirements/: requirements.txt
