[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-template"
version = "0.1.0"
description = "A modern Django template"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "psycopg[binary]>=3.1.0",
    "django-environ>=0.11.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E203",
    "E501",
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

